docs: establish Q-007 BrokerOS risk core domain foundation